src/com/eblackwelder/date/DateParser_enParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g 2012-06-16 11:05:21

package com.eblackwelder.date;

import java.util.Calendar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class DateParser_enParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "PLUS", "MINUS", "COMMA", "A", "NUMBER_LITERAL", "Y", "E", "S", "T", "R", "D", "O", "M", "W", "K", "N", "H", "U", "F", "I", "V", "X", "G", "L", "B", "NEWLINE", "WS", "C", "J", "P", "Q", "Z"
    };
    public static final int D=14;
    public static final int E=10;
    public static final int F=22;
    public static final int G=26;
    public static final int A=7;
    public static final int B=28;
    public static final int C=31;
    public static final int L=27;
    public static final int M=16;
    public static final int N=19;
    public static final int O=15;
    public static final int H=20;
    public static final int I=23;
    public static final int J=32;
    public static final int K=18;
    public static final int U=21;
    public static final int T=12;
    public static final int W=17;
    public static final int V=24;
    public static final int Q=34;
    public static final int P=33;
    public static final int S=11;
    public static final int MINUS=5;
    public static final int R=13;
    public static final int EOF=-1;
    public static final int Y=9;
    public static final int X=25;
    public static final int Z=35;
    public static final int WS=30;
    public static final int NEWLINE=29;
    public static final int COMMA=6;
    public static final int PLUS=4;
    public static final int NUMBER_LITERAL=8;

    // delegates
    // delegators


        public DateParser_enParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DateParser_enParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return DateParser_enParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g"; }


        private final DateDelegate delegate = new DateDelegate();



    // $ANTLR start "date_string"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:23:1: date_string returns [java.util.Date date] : ( EOF | date_expression ( date_modifier )? | date_modifier ) ;
    public final java.util.Date date_string() throws RecognitionException {
        java.util.Date date = null;

        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:27:42: ( ( EOF | date_expression ( date_modifier )? | date_modifier ) )
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:28:2: ( EOF | date_expression ( date_modifier )? | date_modifier )
            {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:28:2: ( EOF | date_expression ( date_modifier )? | date_modifier )
            int alt2=3;
            switch ( input.LA(1) ) {
            case EOF:
                {
                alt2=1;
                }
                break;
            case A:
            case NUMBER_LITERAL:
            case Y:
            case E:
            case S:
            case T:
            case O:
            case M:
            case W:
            case N:
            case F:
            case L:
                {
                alt2=2;
                }
                break;
            case PLUS:
            case MINUS:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:29:3: EOF
                    {
                    match(input,EOF,FOLLOW_EOF_in_date_string80); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:30:5: date_expression ( date_modifier )?
                    {
                    pushFollow(FOLLOW_date_expression_in_date_string86);
                    date_expression();

                    state._fsp--;

                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:30:21: ( date_modifier )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( ((LA1_0>=PLUS && LA1_0<=MINUS)) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:30:21: date_modifier
                            {
                            pushFollow(FOLLOW_date_modifier_in_date_string88);
                            date_modifier();

                            state._fsp--;


                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:31:5: date_modifier
                    {
                    pushFollow(FOLLOW_date_modifier_in_date_string95);
                    date_modifier();

                    state._fsp--;


                    }
                    break;

            }

             date = delegate.getDate(); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return date;
    }
    // $ANTLR end "date_string"


    // $ANTLR start "binary_operator"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:36:1: binary_operator returns [int direction] : ( PLUS | MINUS );
    public final int binary_operator() throws RecognitionException {
        int direction = 0;

        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:36:40: ( PLUS | MINUS )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==PLUS) ) {
                alt3=1;
            }
            else if ( (LA3_0==MINUS) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:37:2: PLUS
                    {
                    match(input,PLUS,FOLLOW_PLUS_in_binary_operator114); 
                     direction = 1; 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:38:4: MINUS
                    {
                    match(input,MINUS,FOLLOW_MINUS_in_binary_operator121); 
                     direction = -1; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return direction;
    }
    // $ANTLR end "binary_operator"


    // $ANTLR start "date_modifier"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:41:1: date_modifier : binary_operator numberExpression unitsOfTime ;
    public final void date_modifier() throws RecognitionException {
        int unitsOfTime1 = 0;

        int binary_operator2 = 0;

        int numberExpression3 = 0;


        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:41:14: ( binary_operator numberExpression unitsOfTime )
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:42:2: binary_operator numberExpression unitsOfTime
            {
            pushFollow(FOLLOW_binary_operator_in_date_modifier132);
            binary_operator2=binary_operator();

            state._fsp--;

            pushFollow(FOLLOW_numberExpression_in_date_modifier134);
            numberExpression3=numberExpression();

            state._fsp--;

            pushFollow(FOLLOW_unitsOfTime_in_date_modifier136);
            unitsOfTime1=unitsOfTime();

            state._fsp--;

             delegate.add(unitsOfTime1, binary_operator2 * numberExpression3); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "date_modifier"


    // $ANTLR start "date_expression"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:45:1: date_expression : ( date_literal | nextOrLastExpression | weekdayExpression | numberExpression unitsOfTime ( ago | from date_expression | beforeOrAfter date_expression ) );
    public final void date_expression() throws RecognitionException {
        int unitsOfTime4 = 0;

        int numberExpression5 = 0;

        int beforeOrAfter6 = 0;


        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:45:16: ( date_literal | nextOrLastExpression | weekdayExpression | numberExpression unitsOfTime ( ago | from date_expression | beforeOrAfter date_expression ) )
            int alt5=4;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:46:2: date_literal
                    {
                    pushFollow(FOLLOW_date_literal_in_date_expression147);
                    date_literal();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:47:4: nextOrLastExpression
                    {
                    pushFollow(FOLLOW_nextOrLastExpression_in_date_expression152);
                    nextOrLastExpression();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:48:4: weekdayExpression
                    {
                    pushFollow(FOLLOW_weekdayExpression_in_date_expression157);
                    weekdayExpression();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:49:4: numberExpression unitsOfTime ( ago | from date_expression | beforeOrAfter date_expression )
                    {
                    pushFollow(FOLLOW_numberExpression_in_date_expression162);
                    numberExpression5=numberExpression();

                    state._fsp--;

                    pushFollow(FOLLOW_unitsOfTime_in_date_expression164);
                    unitsOfTime4=unitsOfTime();

                    state._fsp--;

                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:49:33: ( ago | from date_expression | beforeOrAfter date_expression )
                    int alt4=3;
                    switch ( input.LA(1) ) {
                    case A:
                        {
                        int LA4_1 = input.LA(2);

                        if ( (LA4_1==G) ) {
                            alt4=1;
                        }
                        else if ( (LA4_1==F) ) {
                            alt4=3;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 4, 1, input);

                            throw nvae;
                        }
                        }
                        break;
                    case F:
                        {
                        alt4=2;
                        }
                        break;
                    case B:
                        {
                        alt4=3;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 4, 0, input);

                        throw nvae;
                    }

                    switch (alt4) {
                        case 1 :
                            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:50:3: ago
                            {
                            pushFollow(FOLLOW_ago_in_date_expression170);
                            ago();

                            state._fsp--;

                             delegate.add(unitsOfTime4, -1 * numberExpression5); 

                            }
                            break;
                        case 2 :
                            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:51:5: from date_expression
                            {
                            pushFollow(FOLLOW_from_in_date_expression178);
                            from();

                            state._fsp--;

                            pushFollow(FOLLOW_date_expression_in_date_expression180);
                            date_expression();

                            state._fsp--;

                             delegate.add(unitsOfTime4, 1 * numberExpression5); 

                            }
                            break;
                        case 3 :
                            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:52:5: beforeOrAfter date_expression
                            {
                            pushFollow(FOLLOW_beforeOrAfter_in_date_expression188);
                            beforeOrAfter6=beforeOrAfter();

                            state._fsp--;

                            pushFollow(FOLLOW_date_expression_in_date_expression190);
                            date_expression();

                            state._fsp--;

                             delegate.add(unitsOfTime4, beforeOrAfter6 * numberExpression5); 

                            }
                            break;

                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "date_expression"


    // $ANTLR start "weekdayExpression"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:56:1: weekdayExpression : weekday ;
    public final void weekdayExpression() throws RecognitionException {
        int weekday7 = 0;


        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:56:18: ( weekday )
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:57:2: weekday
            {
            pushFollow(FOLLOW_weekday_in_weekdayExpression204);
            weekday7=weekday();

            state._fsp--;

             delegate.setDayOfWeek(weekday7); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "weekdayExpression"


    // $ANTLR start "numberExpression"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:60:1: numberExpression returns [int value] : ( ( the | A ) | number_literal | number_word );
    public final int numberExpression() throws RecognitionException {
        int value = 0;

        DateParser_enParser.number_literal_return number_literal8 = null;

        int number_word9 = 0;


        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:60:37: ( ( the | A ) | number_literal | number_word )
            int alt7=3;
            switch ( input.LA(1) ) {
            case T:
                {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==H) ) {
                    int LA7_5 = input.LA(3);

                    if ( (LA7_5==E) ) {
                        alt7=1;
                    }
                    else if ( (LA7_5==R) ) {
                        alt7=3;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 5, input);

                        throw nvae;
                    }
                }
                else if ( (LA7_1==E||LA7_1==W) ) {
                    alt7=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
                }
                break;
            case A:
                {
                alt7=1;
                }
                break;
            case NUMBER_LITERAL:
                {
                alt7=2;
                }
                break;
            case E:
            case S:
            case O:
            case N:
            case F:
                {
                alt7=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }

            switch (alt7) {
                case 1 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:61:2: ( the | A )
                    {
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:61:2: ( the | A )
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==T) ) {
                        alt6=1;
                    }
                    else if ( (LA6_0==A) ) {
                        alt6=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 0, input);

                        throw nvae;
                    }
                    switch (alt6) {
                        case 1 :
                            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:61:3: the
                            {
                            pushFollow(FOLLOW_the_in_numberExpression220);
                            the();

                            state._fsp--;


                            }
                            break;
                        case 2 :
                            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:61:9: A
                            {
                            match(input,A,FOLLOW_A_in_numberExpression224); 

                            }
                            break;

                    }

                     value = 1; 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:62:4: number_literal
                    {
                    pushFollow(FOLLOW_number_literal_in_numberExpression234);
                    number_literal8=number_literal();

                    state._fsp--;

                     value = Integer.parseInt((number_literal8!=null?input.toString(number_literal8.start,number_literal8.stop):null)); 

                    }
                    break;
                case 3 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:63:4: number_word
                    {
                    pushFollow(FOLLOW_number_word_in_numberExpression241);
                    number_word9=number_word();

                    state._fsp--;

                     value = number_word9; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "numberExpression"


    // $ANTLR start "number_word"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:66:1: number_word returns [int value] : ( one | two | three | four | five | six | seven | eight | nine | ten );
    public final int number_word() throws RecognitionException {
        int value = 0;

        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:66:32: ( one | two | three | four | five | six | seven | eight | nine | ten )
            int alt8=10;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:67:2: one
                    {
                    pushFollow(FOLLOW_one_in_number_word257);
                    one();

                    state._fsp--;

                     value = 1; 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:68:4: two
                    {
                    pushFollow(FOLLOW_two_in_number_word265);
                    two();

                    state._fsp--;

                     value = 2; 

                    }
                    break;
                case 3 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:69:4: three
                    {
                    pushFollow(FOLLOW_three_in_number_word272);
                    three();

                    state._fsp--;

                     value = 3; 

                    }
                    break;
                case 4 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:70:4: four
                    {
                    pushFollow(FOLLOW_four_in_number_word279);
                    four();

                    state._fsp--;

                     value = 4; 

                    }
                    break;
                case 5 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:71:4: five
                    {
                    pushFollow(FOLLOW_five_in_number_word286);
                    five();

                    state._fsp--;

                     value = 5; 

                    }
                    break;
                case 6 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:72:4: six
                    {
                    pushFollow(FOLLOW_six_in_number_word293);
                    six();

                    state._fsp--;

                     value = 6; 

                    }
                    break;
                case 7 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:73:4: seven
                    {
                    pushFollow(FOLLOW_seven_in_number_word300);
                    seven();

                    state._fsp--;

                     value = 7; 

                    }
                    break;
                case 8 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:74:4: eight
                    {
                    pushFollow(FOLLOW_eight_in_number_word307);
                    eight();

                    state._fsp--;

                     value = 8; 

                    }
                    break;
                case 9 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:75:4: nine
                    {
                    pushFollow(FOLLOW_nine_in_number_word314);
                    nine();

                    state._fsp--;

                     value = 9; 

                    }
                    break;
                case 10 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:76:4: ten
                    {
                    pushFollow(FOLLOW_ten_in_number_word321);
                    ten();

                    state._fsp--;

                     value = 10; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "number_word"

    public static class number_literal_return extends ParserRuleReturnScope {
    };

    // $ANTLR start "number_literal"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:79:1: number_literal : NUMBER_LITERAL ;
    public final DateParser_enParser.number_literal_return number_literal() throws RecognitionException {
        DateParser_enParser.number_literal_return retval = new DateParser_enParser.number_literal_return();
        retval.start = input.LT(1);

        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:79:15: ( NUMBER_LITERAL )
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:80:2: NUMBER_LITERAL
            {
            match(input,NUMBER_LITERAL,FOLLOW_NUMBER_LITERAL_in_number_literal332); 

            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "number_literal"


    // $ANTLR start "date_literal"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:83:1: date_literal : ( now | yesterday | today | tomorrow );
    public final void date_literal() throws RecognitionException {
        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:87:13: ( now | yesterday | today | tomorrow )
            int alt9=4;
            switch ( input.LA(1) ) {
            case N:
                {
                alt9=1;
                }
                break;
            case Y:
                {
                alt9=2;
                }
                break;
            case T:
                {
                int LA9_3 = input.LA(2);

                if ( (LA9_3==O) ) {
                    int LA9_4 = input.LA(3);

                    if ( (LA9_4==D) ) {
                        alt9=3;
                    }
                    else if ( (LA9_4==M) ) {
                        alt9=4;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 9, 4, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 3, input);

                    throw nvae;
                }
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }

            switch (alt9) {
                case 1 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:88:2: now
                    {
                    pushFollow(FOLLOW_now_in_date_literal343);
                    now();

                    state._fsp--;

                     delegate.today(); 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:89:4: yesterday
                    {
                    pushFollow(FOLLOW_yesterday_in_date_literal352);
                    yesterday();

                    state._fsp--;

                     delegate.yesterday(); 

                    }
                    break;
                case 3 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:90:4: today
                    {
                    pushFollow(FOLLOW_today_in_date_literal359);
                    today();

                    state._fsp--;

                     delegate.today(); 

                    }
                    break;
                case 4 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:91:4: tomorrow
                    {
                    pushFollow(FOLLOW_tomorrow_in_date_literal367);
                    tomorrow();

                    state._fsp--;

                     delegate.tomorrow(); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "date_literal"


    // $ANTLR start "weekday"
    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:94:1: weekday returns [int value] : ( monday | tuesday | wednesday | thursday | friday | saturday | sunday );
    public final int weekday() throws RecognitionException {
        int value = 0;

        try {
            // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:98:28: ( monday | tuesday | wednesday | thursday | friday | saturday | sunday )
            int alt10=7;
            alt10 = dfa10.predict(input);
            switch (alt10) {
                case 1 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:99:2: monday
                    {
                    pushFollow(FOLLOW_monday_in_weekday384);
                    monday();

                    state._fsp--;

                     value = Calendar.MONDAY; 

                    }
                    break;
                case 2 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:100:4: tuesday
                    {
                    pushFollow(FOLLOW_tuesday_in_weekday392);
                    tuesday();

                    state._fsp--;

                     value = Calendar.TUESDAY; 

                    }
                    break;
                case 3 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:101:4: wednesday
                    {
                    pushFollow(FOLLOW_wednesday_in_weekday399);
                    wednesday();

                    state._fsp--;

                     value = Calendar.WEDNESDAY; 

                    }
                    break;
                case 4 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:102:4: thursday
                    {
                    pushFollow(FOLLOW_thursday_in_weekday406);
                    thursday();

                    state._fsp--;

                     value = Calendar.THURSDAY; 

                    }
                    break;
                case 5 :
                    // C:\\Users\\Ethan\\workspaces\\Java\\DateParser-github\\src\\com/eblackwelder/date\\DateParser_en.g:103:4: friday
                    {
                    pushFollow(FOLLOW_friday_in_weekday413);
                    friday();

                    state._fsp--;

                     value = Calendar.FRIDAY; 

                    }
                    break;
                case 6 :
